--- a/clusters/production/istio/istio-gateway.yaml
+++ b/clusters/production/istio/istio-gateway.yaml
@@ -60,7 +60,8 @@ spec:
         number: 80
         name: http
         protocol: HTTP
-      httpsRedirect: true
+      tls:
+        httpsRedirect: true
       hosts:
         - "logging.k8s.cc.private.hm.edu"
     - port:
