--- a/clusters/production/monitoring/grafana/patches/env.yaml
+++ b/clusters/production/monitoring/grafana/patches/env.yaml
@@ -23,3 +23,4 @@ spec:
       GF_SECURITY_ALLOW_EMBEDDING: true
       GF_SECURITY_COOKIE_SAMESITE: grafana
       GF_SERVER_DOMAIN: "logging.k8s.cc.private.hm.edu"
+      GF_SERVER_HTTPS: true
