--- a/clusters/production/monitoring/grafana/patches/env.yaml
+++ b/clusters/production/monitoring/grafana/patches/env.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   values:
     env:
+      GF_LOG_LEVEL: debug
       GF_ANALYTICS_CHECK_FOR_UPDATES: false
       GF_DATABASE_NAME: grafana
       GF_DATABASE_SSL_MODE: disable
