--- a/clusters/production/monitoring/grafana/patches/env.yaml
+++ b/clusters/production/monitoring/grafana/patches/env.yaml
@@ -20,9 +20,9 @@ spec:
       GF_PATHS_LOGS: /var/log/grafana
       GF_PATHS_PLUGINS: /var/lib/grafana/plugins
       GF_PATHS_PROVISIONING: /etc/grafana/provisioning
-      GF_SECURITY_ALLOW_EMBEDDING: true
-      GF_SECURITY_COOKIE_SAMESITE: grafana
-      GF_SECURITY_COOKIE_SECURE: true
       GF_SERVER_DOMAIN: "logging.k8s.cc.private.hm.edu"
       GF_SERVER_HTTPS: true
       GF_SERVER_ROOT_URL: "https://logging.k8s.cc.private.hm.edu"
+      GF_SECURITY_ALLOW_EMBEDDING: true
+      GF_SECURTIY_COOKIE_SECURE: false
+      GF_SECURITY_COOKIE_SAMESITE: disabled
