enable postgres backend

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -14,15 +14,44 @@ sops:
     age:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6SHpYdFRaaVF5c3FhbjJJ
-            a3JJTWZ4UWJvbFdKdlRONDB6eHZlMUs0SzBvCjdmWjNEZGtmK2NsemtVazRRVko5
-            T3EwYndDNEw4WVBJRWJGV0l5ejNMdXMKLS0tIHlqYm1yY1FHSUk5NlNYRVc0MGNi
-            SjRVUXZvdUlkNFNZUGZkR2EyWWpIQ2MKDj8EBbBnorrU+v9yBw8C73QBhwn2Ki1m
-            wxCfuAKtQjh5cJIJsFNCgoPZzJS9cROH4fPga05Sk/OKdSW4OEFMfQ==
-            -----END AGE ENCRYPTED FILE-----
+              -----BEGIN AGE ENCRYPTED FILE-----
+              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6SHpYdFRaaVF5c3FhbjJJ
+              a3JJTWZ4UWJvbFdKdlRONDB6eHZlMUs0SzBvCjdmWjNEZGtmK2NsemtVazRRVko5
+              T3EwYndDNEw4WVBJRWJGV0l5ejNMdXMKLS0tIHlqYm1yY1FHSUk5NlNYRVc0MGNi
+              SjRVUXZvdUlkNFNZUGZkR2EyWWpIQ2MKDj8EBbBnorrU+v9yBw8C73QBhwn2Ki1m
+              wxCfuAKtQjh5cJIJsFNCgoPZzJS9cROH4fPga05Sk/OKdSW4OEFMfQ==
+              -----END AGE ENCRYPTED FILE-----
     lastmodified: "2022-10-21T11:20:19Z"
     mac: ENC[AES256_GCM,data:9eeqHUgi5XfBxK7cXdHpfh85PCeKUtluzqYDbfvZ+5Lv1X1nb16fHTYZe93wOlURdgjZfsmiKJ2VVRqDaMFawAGJHVKT9eu1hxbaO/RmNJ6yM9yanA56e+4ihTwH6cbQ9pXe8WotZC5JvIKtofeKj7IfYF/+E3+bLxBQDfjgHQs=,iv:CUPoCqwgZL6NpnjCe8JS04RiKoFmNNkxXHDFTHdjaZs=,tag:QvmKLyH8PPnebVfWMDRA+g==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.3
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: grafana
+    namespace: default
+stringData:
+    GF_DATABASE_USER: ENC[AES256_GCM,data:+E595WUGTQ==,iv:tQGaLij6F2kOuhqYNo+O2Kz9f5VrjK04AvG8xXV+yos=,tag:MuSufQeu/aauAOhcOLONbA==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:fyp6T4qPig==,iv:SbXLmYwQRsnwQRoVYlBVqo9WLfLShLQeGlts8ZjJjr4=,tag:UbPkqlxHLewi1ia21G5HPQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
+          enc: |
+              -----BEGIN AGE ENCRYPTED FILE-----
+              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiNEZTQ2lzejl3amJiYjho
+              aDIxdUZhSktsZDVoSFAyVllDV1dQaGpxSHowCk1WVXVyYTFTc203WWtHckd5ZGcz
+              V24wanpnOForb3NFaVByMi9sOURYSkUKLS0tIEVoZ2JZdm9XTEdiOWM2WkpPT1cw
+              VkRPcm9yZVFCc0pWeVdTQkdMc0NibHcKbaexwfoP8Rj8hHwBddJ5Ebb2rM/KiW2L
+              k5eQCdMNPVPAuuTdpFenAtNS56KbGsll7ep4CVxyXOAOCjwwZCjCng==
+              -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-10-25T11:59:15Z"
+    mac: ENC[AES256_GCM,data:ir87FUz5sLneu56KlZfEu1ApzIpOuFioNEMaZhSBPJUDEWL2zPW/Ciig2F7lYd1U0dvQYB1XrAIDJBYIRihNDsjolXYcrMAE9RTv0sUnhlnOEzpRBD1eS5j++AQABKqnrkgT1sPp6jJ/7H4CmyUdoB6jhkKA5MqFUHusweZX+m0=,iv:6sPmvCwN9QjtcqBOKeDUgt2kAjwTMl44OCrKR99pWYI=,tag:mgvvB/rclF5ZVButVudCcA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
