--- a/clusters/production/monitoring/grafana/patches/env.yaml
+++ b/clusters/production/monitoring/grafana/patches/env.yaml
@@ -9,10 +9,10 @@ spec:
     env:
       GF_ANALYTICS_CHECK_FOR_UPDATES: false
       GF_DATABASE_NAME: grafana
+      GF_DATABASE_HOST: postgres.portal.svc.cluster.local:5432
       GF_DATABASE_SSL_MODE: disable
       GF_DATE_FORMATS_FULL_DATE: "MMM Do, YYYY hh:mm:ss a"
       GF_EXPLORE_ENABLED: true
-      GF_GRAFANA_NET_URL: https://grafana.net
       GF_LOG_FILTERS: rendering:debug
       GF_LOG_MODE: console
       GF_PANELS_DISABLE_SANITIZE_HTML: true
