--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -108,6 +108,8 @@ spec:
             - mountPath: /home/step/config
               name: cert-config
           env:
+            - name: STEP_LOGGER_ONLY_TRACE_HEALTH_ENDPOINT
+              value: "true"
             - name: OTEL_EXPORTER_JAEGER_ENDPOINT
               value: http://tempo-tempo-distributed-distributor.monitoring:14268/api/traces
       volumes:
