--- a/clusters/production/portal/acme/acme.yaml
+++ b/clusters/production/portal/acme/acme.yaml
@@ -111,7 +111,7 @@ spec:
             - name: STEP_LOGGER_ONLY_TRACE_HEALTH_ENDPOINT
               value: "true"
             - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-              value: http://tempo-tempo-distributed-distributor.monitoring:14268/api/traces
+              value: http://tempo-distributor.monitoring:14268/api/traces
       volumes:
         - name: cert-config
           configMap:
