disable injection for hook

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -90,6 +90,12 @@ spec:
       enabled: false
     kubeEtcd:
       enabled: false
+
+    prometheusOperator:
+      admissionWebhooks:
+        patch:
+          podAnnotations:
+            sidecar.istio.io/inject: "false"
     prometheus:
       annotations:
         traffic.sidecar.istio.io/includeInboundPorts: ""
