fix podmonitor for pki-service

--- a/clusters/production/monitoring/services/pki.yaml
+++ b/clusters/production/monitoring/services/pki.yaml
@@ -8,13 +8,29 @@ spec:
     matchNames:
       - portal
   podMetricsEndpoints:
-    - port: 15020
-      path: /stats/prometheus
+    - path: /stats/prometheus
+      interval: 15s
       relabelings:
         - action: keep
-          regex: Running
+          sourceLabels: [__meta_kubernetes_pod_container_name]
+          regex: "istio-proxy"
+        - action: keep
           sourceLabels:
-            - __meta_kubernetes_pod_phase
+            [__meta_kubernetes_pod_annotationpresent_prometheus_io_scrape]
+        - sourceLabels:
+            [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+          action: replace
+          regex: ([^:]+)(?::\d+)?;(\d+)
+          replacement: $1:$2
+          targetLabel: __address__
+        - action: labeldrop
+          regex: "__meta_kubernetes_pod_label_(.+)"
+        - sourceLabels: [__meta_kubernetes_namespace]
+          action: replace
+          targetLabel: namespace
+        - sourceLabels: [__meta_kubernetes_pod_name]
+          action: replace
+          targetLabel: pod_name
   selector:
     matchExpressions:
       - key: app
