--- a/clusters/production/monitoring/services/pki.yaml
+++ b/clusters/production/monitoring/services/pki.yaml
@@ -31,6 +31,7 @@ spec:
         - sourceLabels: [__meta_kubernetes_pod_name]
           action: replace
           targetLabel: pod_name
+      metricRelabelings:
         - sourceLabels: [__name__]
           regex: (ssl_issue_(.*))
           action: keep
