try fixing loki canary & vector

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -77,6 +77,13 @@ spec:
           inputs:
             - kubernetes_logs_remap
           condition: .container_name == "loki-canary"
+        kubernetes_logs_canary_remap:
+          type: remap
+          drop_on_error: true
+          inputs:
+            - kubernetes_logs_canary
+          source: |
+            . = .message
       sinks:
         loki_journal:
           type: loki
@@ -96,7 +103,7 @@ spec:
         loki_kubernetes_canary:
           type: loki
           inputs:
-            - kubernetes_logs_canary
+            - kubernetes_logs_canary_remap
           endpoint: http://loki-gateway:80
           encoding:
             codec: json
@@ -104,7 +111,7 @@ spec:
             max_bytes: 2049000
           out_of_order_action: accept
           remove_label_fields: true
-          remove_timestamp: true
+          remove_timestamp: false
           labels:
             pod: >-
               {{`{{ pod_name }}`}}
