disable batching for canary

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -100,11 +100,9 @@ spec:
           endpoint: http://loki-gateway:80
           encoding:
             codec: text
-          batch:
-            max_bytes: 2049000
           out_of_order_action: accept
           remove_label_fields: true
-          remove_timestamp: false
+          remove_timestamp: true
           labels:
             pod: >-
               {{`{{ pod_name }}`}}
