enable more agressive retention of old data

--- a/clusters/production/monitoring/loki/helm.yaml
+++ b/clusters/production/monitoring/loki/helm.yaml
@@ -43,6 +43,13 @@ spec:
           join_members: ["loki-memberlist"]
         limits_config:
           retention_period: 14d
+          retention_stream:
+          - selector: '{agent="vector"}'
+            priority: 1
+            period: 24h
+          - selector: '{pod=~"loki-canary-.*"}'
+            priority: 2
+            period: 24h
           enforce_metric_name: false
           reject_old_samples: true
           reject_old_samples_max_age: 168h
