try to enable oauth for grafana

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -33,8 +33,17 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_DATABASE_USER: ENC[AES256_GCM,data:+E595WUGTQ==,iv:tQGaLij6F2kOuhqYNo+O2Kz9f5VrjK04AvG8xXV+yos=,tag:MuSufQeu/aauAOhcOLONbA==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:fyp6T4qPig==,iv:SbXLmYwQRsnwQRoVYlBVqo9WLfLShLQeGlts8ZjJjr4=,tag:UbPkqlxHLewi1ia21G5HPQ==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:r7f4OQSb3w==,iv:y0Z7YO5W3tFVMo5XUWWfCK9MAPq6sZnpy5GvKSg+ZXY=,tag:v8AZIbLMGShHO0NtErd5OA==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:B9r+wyLprw==,iv:gpPPTQpY5Q1NH6mN75nQDdX9l4qOR+EWbepIF2W+5G0=,tag:/nxvSTnfDyw5LLSC6xSwwQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:n0apGeGc,iv:dMgVSZ6HEIOfYONaRh29GAFoxkHrI9YO0k6tVCLi8Bw=,tag:mfczFkx3Nt8lBEeq1zmrag==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:ZkUhbA==,iv:cA6OoM4s1e+A2cXr98bcT8iAg2xoztZl11Nqts47x90=,tag:qPIgQjcundKFdrcXh0EaEA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:VU8C97s=,iv:55RkxsZDcfiG0vSAYiB0LR2klZVYtrX9/r0ziASxpBc=,tag:dXo+iO1juukmdr2o+0huhQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:o3syYsT01Hv2sN6hZyJFLZcmD3QDbWkaKNs8wp4=,iv:WrYvUwCtloQ5rwAHF9W78SFk17HG/hOiL6Z73B9cLXI=,tag:2mcGs5HlgWxQHmxLvzfiPw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:OmI3SlMoFlDbtWW5VEN/Oj4OiiTf4LnM76dT7kccmABujLXz,iv:bRaEuiSAdwKD8IBNAHwCOWjeO+O1CRGDfN1OcqTEwkQ=,tag:IKaM0LUKVSDGUqVl0JruYg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:VBa8XB3rUFQCccYDSKq5a/CoU7w=,iv:v4suyXZlGcUcvv9vqxciMVzxsaRBydJLa7j9GoEVRjo=,tag:VCFsgVXMS9UxzMQiG5m9HQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:8buzMdToAZ08lZ6gI83dyy1rabNdqpqeXxs1jlMWejicWANBfjnP9+Hp8hJG,iv:wL/1iA/VIoKWtqFjWc8vTIJMaR5EREAadHfF+Up/rUo=,tag:z4PbkIqfeZOBhYqBzrxwNw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:K6CccTRDI5AjDLKnm79X7362yH9begvg8rhhtw7pIqmpSnNReZSmigI=,iv:JLHLX+tnDF1Lw9mWwV3FFLj1sZ2/S+vt3o79WVkilcU=,tag:pibnvCSUpxXgrVq8ESXJ3Q==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:JzkQerbVdviIyIIhjqsFWjXRkCie6KpehZa75Hfr3YrG08Rpfu2gysP29m4=,iv:CEOtMQfVCN7gg4N6h21R8z7WhujnQRvFaDDhQUTTmPo=,tag:hTTL3y3MgWiqA7lVMCmj+Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -44,14 +53,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
               -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiNEZTQ2lzejl3amJiYjho
-              aDIxdUZhSktsZDVoSFAyVllDV1dQaGpxSHowCk1WVXVyYTFTc203WWtHckd5ZGcz
-              V24wanpnOForb3NFaVByMi9sOURYSkUKLS0tIEVoZ2JZdm9XTEdiOWM2WkpPT1cw
-              VkRPcm9yZVFCc0pWeVdTQkdMc0NibHcKbaexwfoP8Rj8hHwBddJ5Ebb2rM/KiW2L
-              k5eQCdMNPVPAuuTdpFenAtNS56KbGsll7ep4CVxyXOAOCjwwZCjCng==
+              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpalBXVXpINzJhOG5uejVq
+              T0FTdHhvL1htcHFaUmY4eUxBQ3ZMcU5sZlRnCjdkOXJMZ0tpSEJYVVVnZHF1VzFL
+              NXIycEJyT3FyL3VVMTRWKzRlVkp6NmMKLS0tIHllNW90OFhITE40R3crVktkbEFu
+              VmJkMEpmL0REMStORDFReFM2SFZ0ZTAKC9KThKGmoCXx2EgBp5Nn02rswqXJlmlT
+              Q0rMDYIS5CMT8E281/rpDe4eKLQ2KMpjE7jMJPti3N4kzSEN3z5jiw==
               -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-10-25T11:59:15Z"
-    mac: ENC[AES256_GCM,data:ir87FUz5sLneu56KlZfEu1ApzIpOuFioNEMaZhSBPJUDEWL2zPW/Ciig2F7lYd1U0dvQYB1XrAIDJBYIRihNDsjolXYcrMAE9RTv0sUnhlnOEzpRBD1eS5j++AQABKqnrkgT1sPp6jJ/7H4CmyUdoB6jhkKA5MqFUHusweZX+m0=,iv:6sPmvCwN9QjtcqBOKeDUgt2kAjwTMl44OCrKR99pWYI=,tag:mgvvB/rclF5ZVButVudCcA==,type:str]
+    lastmodified: "2022-11-01T16:41:23Z"
+    mac: ENC[AES256_GCM,data:nwM6QYU74Y5b/VwK66vfy5L5fRxko6M6BTn1VbuDTkFLsW98NEvV7xR37D1/qBzezo2zmX5WaJouGGBNRhPXA7st+305jl/h69CcGTHEMRzCXGe2AGnw806mMbUW4mHIs2EagwXEEYRsHlKBrTsmD5lD+7PsHJnRWvXnFGRhIc4=,iv:BoDjbXgp8pzSsB/NPHCx9YuRMw6R8nVqeho2O87QAsI=,tag:5N20DmZAGQKA/ofQTI1jPQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
