--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -66,6 +66,7 @@ spec:
             type: loki
             access: proxy
             url: http://loki-gateway.monitoring.svc.cluster.local:80
+            isDefault: true
     dashboards:
       default:
         # Ref: https://grafana.com/grafana/dashboards/13502
