--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -40,8 +40,8 @@ spec:
             orgId: 1
             folder: ""
             type: file
-            disableDeletion: false
-            editable: true
+            disableDeletion: true
+            editable: false
             options:
               path: /var/lib/grafana/dashboards/default
     datasources:
