--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -21,6 +21,8 @@ spec:
   upgrade:
     remediation:
       retries: 5
+    cleanupOnFail: true
+    crds: CreateReplace
   values:
     alertmanager:
       config:
