chore: streamline definitions of helm release

--- a/core/longhorn/helm.yaml
+++ b/core/longhorn/helm.yaml
@@ -22,6 +22,8 @@ spec:
   upgrade:
     remediation:
       retries: 5
+    cleanupOnFail: true
+    crds: CreateReplace
   values:
     defaultSettings:
       replicaAutoBalance: "best-effort"
