--- a/clusters/production/monitoring/thanos/helm.yaml
+++ b/clusters/production/monitoring/thanos/helm.yaml
@@ -21,6 +21,8 @@ spec:
   upgrade:
     remediation:
       retries: 5
+    cleanupOnFail: true
+    crds: CreateReplace
   dependsOn:
     - name: kube-prometheus-stack
       namespace: monitoring
