--- a/clusters/production/monitoring/vector/agent/helm.yaml
+++ b/clusters/production/monitoring/vector/agent/helm.yaml
@@ -21,6 +21,8 @@ spec:
   upgrade:
     remediation:
       retries: 5
+    cleanupOnFail: true
+    crds: CreateReplace
   dependsOn:
     - name: loki
       namespace: monitoring
